--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "bcrypt": "^5.0.0",
     "class-transformer": "^0.3.2",
     "class-validator": "^0.13.1",
+    "fsevents": "^2.1.3",
     "lodash": "^4.17.20",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
@@ -45,12 +46,12 @@
   },
   "devDependencies": {
     "@nestjs/cli": "^7.5.1",
-    "@types/bcrypt": "^3.0.0",
-    "@types/lodash": "^4.14.168",
     "@nestjs/schematics": "^7.1.3",
     "@nestjs/testing": "^7.5.1",
+    "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.17.8",
     "@types/jest": "^26.0.15",
+    "@types/lodash": "^4.14.168",
     "@types/node": "^14.14.6",
     "@types/passport-jwt": "^3.0.3",
     "@types/passport-local": "^1.0.33",
