Implement auth apis Add mailer module Clean up code

--- a/example.env
+++ b/example.env
@@ -13,3 +13,8 @@ TYPEORM_ENTITIES = dist/**/*.entity.js,dist/**/*.entity.ts
 JWT_SECRET_KEY = secret
 JWT_EXPIRATION_TIME = 30d
 BCRYPT_ROUNDS = 11
+
+MAIL_HOST = smtp.ethereal.email
+MAIL_PORT = 587
+MAIL_USER = mbradley.halvorson16@ethereal.email
+MAIL_PASS = Puf8gEz4Zw3GZCXq62
