--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/jwt": "^7.2.0",
     "@nestjs/passport": "^7.1.5",
     "@nestjs/platform-express": "^7.5.1",
+    "@nestjs/serve-static": "^2.1.4",
     "@nestjs/swagger": "^4.7.12",
     "@nestjs/typeorm": "^7.1.5",
     "bcrypt": "^5.0.0",
@@ -52,6 +53,7 @@
     "@types/express": "^4.17.8",
     "@types/jest": "^26.0.15",
     "@types/lodash": "^4.14.168",
+    "@types/multer": "^1.4.5",
     "@types/node": "^14.14.6",
     "@types/nodemailer": "^6.4.0",
     "@types/passport-jwt": "^3.0.3",
