--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/bull": "^0.3.1",
     "@nestjs/common": "^7.5.1",
     "@nestjs/config": "^0.6.2",
     "@nestjs/core": "^7.5.1",
@@ -30,7 +31,10 @@
     "@nestjs/serve-static": "^2.1.4",
     "@nestjs/swagger": "^4.7.12",
     "@nestjs/typeorm": "^7.1.5",
+    "@types/archiver": "^5.1.0",
+    "archiver": "^5.3.0",
     "bcrypt": "^5.0.0",
+    "bull": "^3.22.0",
     "class-transformer": "^0.3.2",
     "class-validator": "^0.13.1",
     "lodash": "^4.17.20",
@@ -50,6 +54,7 @@
     "@nestjs/schematics": "^7.1.3",
     "@nestjs/testing": "^7.5.1",
     "@types/bcrypt": "^3.0.0",
+    "@types/bull": "^3.15.0",
     "@types/express": "^4.17.8",
     "@types/jest": "^26.0.15",
     "@types/lodash": "^4.14.168",
