--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,8 @@
     "incremental": true,
     "strictNullChecks": true,
     "strictFunctionTypes": true,
-    "noImplicitAny": true
+    "noImplicitAny": true,
+    "typeRoots": ["./node_modules/@types"],
+    "esModuleInterop": true
   }
 }
