--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "@nestjs/jwt": "^7.2.0",
     "@nestjs/passport": "^7.1.5",
     "@nestjs/platform-express": "^7.5.1",
+    "@nestjs/platform-socket.io": "^7.6.15",
     "@nestjs/serve-static": "^2.1.4",
     "@nestjs/swagger": "^4.7.12",
     "@nestjs/typeorm": "^7.1.5",
+    "@nestjs/websockets": "^7.6.15",
     "@types/archiver": "^5.1.0",
     "archiver": "^5.3.0",
     "bcrypt": "^5.0.0",
@@ -63,6 +65,7 @@
     "@types/nodemailer": "^6.4.0",
     "@types/passport-jwt": "^3.0.3",
     "@types/passport-local": "^1.0.33",
+    "@types/socket.io": "^2.1.13",
     "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^4.6.1",
     "@typescript-eslint/parser": "^4.6.1",
