--- a/package.json
+++ b/package.json
@@ -29,16 +29,19 @@
     "@nestjs/passport": "^7.1.5",
     "@nestjs/platform-express": "^7.5.1",
     "@nestjs/platform-socket.io": "^7.6.15",
+    "@nestjs/schedule": "^0.4.3",
     "@nestjs/serve-static": "^2.1.4",
     "@nestjs/swagger": "^4.7.12",
     "@nestjs/typeorm": "^7.1.5",
     "@nestjs/websockets": "^7.6.15",
     "@types/archiver": "^5.1.0",
+    "@types/glob": "^7.1.3",
     "archiver": "^5.3.0",
     "bcrypt": "^5.0.0",
     "bull": "^3.22.0",
     "class-transformer": "^0.3.2",
     "class-validator": "^0.13.1",
+    "glob": "^7.1.6",
     "lodash": "^4.17.20",
     "nodemailer": "^6.4.17",
     "passport": "^0.4.1",
@@ -57,6 +60,7 @@
     "@nestjs/testing": "^7.5.1",
     "@types/bcrypt": "^3.0.0",
     "@types/bull": "^3.15.0",
+    "@types/cron": "^1.7.2",
     "@types/express": "^4.17.8",
     "@types/jest": "^26.0.15",
     "@types/lodash": "^4.14.168",
